# serial_communication_channels

./: CMakeLists.txt  README.md  package.xml
example/serial_communication_example/: README.txt  edgar_arm_communications.c  edgar_arm_communications.h  serial_communication_channels.c  serial_communication_channels.h  serial_communication_example.ino  serial_communications_example.h
example/serial_communication_example/pc_node_code/: pc_node_example.cpp  serial_communications_example.c  serial_communications_example.h
src/: serial_communication_channels.c
