<package>
  <name> serial_communication_channels </name>
  <version> 0.0.0 </version>
  <description> TODO </description>

  <maintainer email="heber.sobreira@gmail.com">heber </maintainer>
  <license> TODO </license>
  <url type="website">http://TODO </url>
  <author email="heber.sobreira@gmail.com">heber </author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  
</package>
